# zeldapaint

./: #ZeldaPnt.c#  .gitignore  CMakeLists.txt  Kopie (2) von ZeldaPnt.c  Kopie von ZeldaPnt.c  Kopie von header.h  Kopie von zelda.h  README.md  ZeldaPnt.c  flake.nix  geist.pcx  geister  geister.pcx  guix.scm  haus2  haus2.map  header.h  jkh.pcx  makefile  makefile~  sprite.ini  strand.map  strand.pcx  zelda.GDT  zelda.GPR  zelda.c  zeldapaint.sh.in  zeldapnt.c
data/: dfsdf.pcx  dump.pcx  haus3.pcx  rasen.pcx
data/maps/: haus3.map  rasen.map
data/sprite/: palme_ul.cpt
src/: zelda.c
